
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.30.0]]
== 0.30.0 (TBD)

icon:check[] Java Rest Client: The OkHttp implementation has replaced the Vert.x implementation. Some changes to the client interface were necessary to make the client independent of Vert.x. See link:https://getmesh.io/docs/platforms/#_java[this example] and the Javadoc for more information.

icon:check[] Core: Fixed a bug that caused too long responses on binary range requests.

[[v0.29.6]]
== 0.29.6 (01.02.2019)

icon:plus[] Core: The way editor references are stored has been refactored to increase performance and reduce contention during database operations. A changelog entry will be invoked which migrates the data.

[[v0.29.5]]
== 0.29.5 (31.01.2019)

icon:check[] Clustering: Creation of edges which lead to higher contention in the graph have been removed from job's. Job's will currently no longer reference the creator.

icon:check[] Search: An error which was thrown by outdated branch schema assignments has been suppressed. A warning will be logged instead.


[[v0.29.4]]
== 0.29.4 (28.01.2019)

icon:check[] Restore: A check has been added which will disable the restore operation while running in clustered mode.

icon:check[] Demo: The demo has been fixed. Previously some of the demo files we were missing.

[[v0.29.3]]
== 0.29.3 (25.01.2019)

icon:plus[] OrientDB: The included OrientDB version has been updated to version 3.0.14

icon:check[] Core: The job processing will no longer be invoked in an interval in order to reduce cluster operation contention. Instead the `/api/v1/admin/processJobs` endpoint can be used to manually trigger job processing.

icon:check[] Core: Fixed a bug that caused nodes with a slash in their segment field to not be found via webroot.
